--- a/custom/lovelace/floors/protect.yaml
+++ b/custom/lovelace/floors/protect.yaml
@@ -1,6 +1,6 @@
 - entities:
-  - binary_sensor.downstairs
-  - binary_sensor.downstairs_2
+  - binary_sensor.downstairs_carbon_monoxide
+  - binary_sensor.downstairs_smoke
   element: room_hall_downstairs
   state_action:
     - service: floorplan.execute
@@ -8,16 +8,16 @@
         classAdd: "${functions.classAdd('protect', element.id)}"
 
 - entities:
-  - binary_sensor.upstairs
-  - binary_sensor.upstairs_2
+  - binary_sensor.upstairs_carbon_monoxide
+  - binary_sensor.upstairs_smoke
   element: room_hall_upstairs_1
   state_action:
     - service: floorplan.execute
       service_data:
         classAdd: "${functions.classAdd('protect', element.id)}"
 - entities:
-  - binary_sensor.upstairs
-  - binary_sensor.upstairs_2
+  - binary_sensor.upstairs_carbon_monoxide
+  - binary_sensor.upstairs_smoke
   element: room_hall_upstairs_2
   state_action:
     - service: floorplan.execute
