--- a/custom/lovelace/general/media.yaml
+++ b/custom/lovelace/general/media.yaml
@@ -24,6 +24,28 @@
     card:
       type: vertical-stack
       cards:
+        # - type: conditional
+        #   conditions:
+        #     - condition: state
+        #       entity: media_player.sftv_android
+        #       state: 'on'
+        #   card:
+        - type: custom:mini-media-player
+          entity: media_player.sftv_android
+          scale: 0.90
+          info: scroll
+          volume_stateless: true
+          toggle_power: true
+          card_mod:
+            style: 
+              .: |
+                  :host {
+                    --paper-item-icon-color: #fff;
+                    --ha-card-background: #c8bcd733;
+                  }
+                  #states {
+                      padding: 4px
+                  }
         - type: custom:auto-entities
           show_empty: false
           filter:
@@ -65,19 +87,25 @@
           show_empty: false
           filter:
             include:
-              - domain: media_player
-                integration: skyq
-                state: paused
-              - domain: media_player
-                integration: skyq
-                state: playing
+            #   - domain: media_player
+            #     integration: skyq
+            #     state: paused
+            #   - domain: media_player
+            #     integration: skyq
+            #     state: playing
               - domain: media_player
                 integration: sonos
                 state: playing
+            #   - domain: media_player
+            #     integration: androidtv_remote
+            #     state: "on"
             exclude:
               - integration: sonos
                 attributes:
                   media_title: "TV" 
+            #   - integration: androidtv_remote
+            #     attributes:
+            #       app_id: "com.sony.dtv.tvx"
           card:
             type: entities
             card_mod:
