--- a/custom/lovelace/floors/appliances.yaml
+++ b/custom/lovelace/floors/appliances.yaml
@@ -1,9 +1,9 @@
 # Oven **************************************
-- entities: 
-  - sensor.neff_top_oven_common_status_operationstate
-  - sensor.neff_bottom_oven_common_status_operationstate
-  tap_action: more-info
-  state_action:
-    action: call-service
-    service: floorplan.class_set
-    service_data: 'appliance oven-${entity.state}' 
+# - entities: 
+#   - sensor.neff_top_oven_common_status_operationstate
+#   - sensor.neff_bottom_oven_common_status_operationstate
+#   tap_action: more-info
+#   state_action:
+#     action: call-service
+#     service: floorplan.class_set
+#     service_data: 'appliance oven-${entity.state}' 
