--- a/custom/packages/default_config/logger.yaml
+++ b/custom/packages/default_config/logger.yaml
@@ -4,8 +4,8 @@ logger:
 #  custom_components.braviatv_psk: debug
     NodeRed: info
     custom_components.homelink: info
-    custom_components.mqtt_discoverystream: info
-    custom_components.mqtt.discovery: debug
+    custom_components.mqtt_discoverystream_alt: info
+    custom_components.mqtt.discovery_alt: debug
 
    # custom_components.homelink.helpers.coordinator: info
     # custom_components.skyq: info
